--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <div class="w3-container w3-white">
         <p><b>Introduction to java</b></p>
         <p>JavaScript is a lightweight, cross-platform, and interpreted compiled programming language which is also known as the scripting language for webpages. It is well-known for the development of web pages, many non-browser environments also use it. JavaScript can be used for Client-side developments as well as Server-side developments. Javascript is both imperative and declarative type of language. JavaScript contains a standard library of objects, like Array, Date, and Math, and a core set of language elements like operators, control structures, and statements. </p>
+        <p><a href="/post.html">Read More </a></p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
@@ -73,13 +74,15 @@
       <div class="w3-container w3-white">
         <p><b>Introduction to HTML </b></p>
         <p>HTML stands for HyperText Markup Language. It is used to design web pages using a markup language. HTML is the combination of Hypertext and Markup language. Hypertext defines the link between web pages. A markup language is used to define the text document within the tag which defines the structure of web pages. This language is used to annotate (make notes for the computer) text so that a machine can understand it and manipulate text accordingly. Most markup languages (e.g. HTML) are human-readable. The language uses tags to define what manipulation has to be done on the text. </p>
+        <p><a href="/post.html">Read More </a></p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="https://user-images.githubusercontent.com/93479842/213844147-52d86b6b-33bd-4f8b-af25-1a6895a74229.png/w3images/nature.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="https://user-images.githubusercontent.com/93479842/213845813-670291b9-96ea-4377-84af-d0ddc6076822.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Introduction to JavaScript</b></p>
         <p>JavaScript is a lightweight, cross-platform, and interpreted compiled programming language which is also known as the scripting language for webpages. It is well-known for the development of web pages, many non-browser environments also use it. JavaScript can be used for Client-side developments as well as Server-side developments. Javascript is both imperative and declarative type of language. JavaScript contains a standard library of objects, like Array, Date, and Math, and a core set of language elements like operators, control structures, and statements. </p>
+        <p><a href="/post.html">Read More </a></p>
       </div>
     </div>
   </div>
