--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <img src="https://user-images.githubusercontent.com/93479842/213847983-b5d5d512-bfae-413c-aa44-dc42ceda5cab.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Introduction to Pandas</b></p>
-        <p>Pandas is an open-source library that is built on top of NumPy library. It is a Python package that offers various data structures and operations for manipulating numerical data and time series.
+        <p>Pandas is an open-source library that is built on top of NumPy library. It is a Python package that offers various data structures and operations for manipulating numerical data and time series. It is mainly popular for importing and analyzing data much easier. Pandas is fast and it has high-performance & productivity for users.
         </p>
       </div>
     </div>
@@ -111,7 +111,8 @@
       <img src="https://user-images.githubusercontent.com/93479842/213847958-e4b1d227-9717-4272-9728-ad8f8c39e015.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Introduction to Numpy</b></p>
-        <p>Python NumPy is a general-purpose array processing package which provides tools for handling the n-dimensional arrays. It provides various computing tools such as comprehensive mathematical functions, linear algebra routines. </p>
+        <p>Python NumPy is a general-purpose array processing package which provides tools for handling the n-dimensional arrays. It provides various computing tools such as comprehensive mathematical functions, linear algebra routines. NumPy provides both the flexibility of Python and the speed of well-optimized compiled C code. It’s easy to use syntax makes it highly accessible and productive for programmers from any background.
+        </p>
       </div>
     </div>
   </div>
