--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <p><b>Introduction to Machine leaning with python</b></p>
         <p>Machine Learning is the ability of the computer to learn without being explicitly programmed. In layman’s terms, it can be described as automating the learning process of computers based on their experiences without any human assistance.
         </p>
+        <p><a href="/post.html">Read More </a></p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
@@ -105,14 +106,16 @@
         <p><b>Introduction to Pandas</b></p>
         <p>Pandas is an open-source library that is built on top of NumPy library. It is a Python package that offers various data structures and operations for manipulating numerical data and time series. It is mainly popular for importing and analyzing data much easier. Pandas is fast and it has high-performance & productivity for users.
         </p>
+        <p><a href="/post.html">Read More </a></p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <img src="https://user-images.githubusercontent.com/93479842/213847958-e4b1d227-9717-4272-9728-ad8f8c39e015.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Introduction to Numpy</b></p>
-        <p>Python NumPy is a general-purpose array processing package which provides tools for handling the n-dimensional arrays. It provides various computing tools such as comprehensive mathematical functions, linear algebra routines. NumPy provides both the flexibility of Python and the speed of well-optimized compiled C code. It’s easy to use syntax makes it highly accessible and productive for programmers from any background.
+        <p>Python NumPy is a general-purpose array processing package which provides tools for handling the n-dimensional arrays. It provides various computing tools such as comprehensive mathematical functions, linear algebra routines. NumPy provides both the flexibility of Python and the speed of well-optimized compiled C code.
         </p>
+        <p><a href="/post.html">Read More </a></p>
       </div>
     </div>
   </div>
