--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@
       <img src="/Media/Rohitash 23.png" alt="Me" style="width:100%">
     </div>
     <div class="w3-col m6">
-      <img src="/Media/Output.png" alt="Me" style="width:100%">
+<!--       <img src="/Media/Output.png" alt="Me" style="width:100%"> -->
+      Rohitash singh
+      Pandas is an open-source library that is built on top of NumPy library. It is a Python package that offers various data structures and operations for manipulating numerical data and time series. It is mainly popular for importing and analyzing data much easier. Pandas is fast and it has high-performance & productivity for users.
     </div>
   </div>
 
