--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
     <h4><b>About Me</b></h4>
     <p>
       I am a software engineer. I am pursuing B.Tech from BSACET Mathura. I am an open source developer.
-      Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-    <hr>
+    </p>
+     <hr>
     
     <h4>Technical Skills</h4>
     <!-- Progress bars / Skills -->
@@ -233,7 +233,7 @@
       </div>
     </div>
     <hr class="w3-opacity">
-    <form action="/action_page.php" target="_blank">
+    <form action="/action_page.php" method="POST" target="_blank">
       <div class="w3-section">
         <label>Name</label>
         <input class="w3-input w3-border" type="text" name="Name" required>
