--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       </div>
     </div>
     <hr class="w3-opacity">
-    <form action="/action_page.php" method="POST" target="_blank">
+    <form action="action_page.php" method="POST" target="_blank">
       <div class="w3-section">
         <label>Name</label>
         <input class="w3-input w3-border" type="text" name="Name" required>
