--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>programming hub</title>
+    <title>Ras Bihari Portfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,7 +19,7 @@
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="/Media/Rohitash 23.png" style="width:45%;" class="w3-round"><br><br>
+    <img src="/Media/Rasu1.jpeg" style="width:45%;" class="w3-round"><br><br>
     <h4><b>PORTFOLIO</b></h4>
   </div>
   <div class="w3-bar-block">
@@ -45,7 +45,7 @@
 
   <!-- Header -->
   <header id="portfolio">
-    <a href="#"><img src="/Media/Rohitash 23.png" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
+    <a href="#"><img src="/Media/Rasu1.jpeg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
     <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
     <h1><b>My Portfolio</b></h1>
@@ -133,7 +133,7 @@
   <!-- Images of Me -->
   <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
-      <img src="/Media/Rohitash 23.png" alt="Me" style="width:100%">
+      <img src="/Media/Rasu2.jpeg" alt="Me" style="width:100%">
     </div>
     <div class="w3-col m6">
       <img src="/Media/IMG_20221229_184846.jpg" alt="Me" style="width:100%">
@@ -221,19 +221,19 @@
     <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-        <p>email@email.com</p>
+        <p>rasuthakur1233@gmail.com</p>
       </div>
       <div class="w3-third w3-teal">
         <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
-        <p>Chicago, US</p>
+        <p>Mathura, India</p>
       </div>
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
-        <p>512312311</p>
+        <p>7466816529</p>
       </div>
     </div>
     <hr class="w3-opacity">
-    <form action="action_page.php" method="POST" target="_blank">
+    <form action="" method="POST" target="_blank">
       <div class="w3-section">
         <label>Name</label>
         <input class="w3-input w3-border" type="text" name="Name" required>
@@ -255,7 +255,7 @@
   <div class="w3-row-padding">
     <div class="w3-third">
       <h3>FOOTER</h3>
-      <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      <p>This is my portfolio website. Here i upload my services that i am try to provide you all please support me by subscribe my portfolio.</p>
       
     </div>
   
@@ -264,13 +264,13 @@
       <ul class="w3-ul w3-hoverable">
         <li class="w3-padding-16">
           <img src="https://www.w3schools.com/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-          <span class="w3-large">Lorem</span><br>
-          <span>Sed mattis nunc</span>
+          <span class="w3-large">Python</span><br>
+          <span>Exception Handling</span>
         </li>
         <li class="w3-padding-16">
           <img src="https://www.w3schools.com/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-          <span class="w3-large">Ipsum</span><br>
-          <span>Praes tinci sed</span>
+          <span class="w3-large">java</span><br>
+          <span>Multiple inheritence</span>
         </li> 
       </ul>
     </div>
