--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <img src="/Media/Rasu2.jpeg" alt="Me" style="width:100%">
     </div>
     <div class="w3-col m6">
-      <img src="/Media/IMG_20221229_184846.jpg" alt="Me" style="width:100%">
+      <img src="/Media/Rasu1.jpeg" alt="Me" style="width:100%">
     </div>
   </div>
 
