--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
-  <div class="container">
+<!--   <div class="container">
         <marque>
             <div class="container" style="width: 100%; padding: 1rem;">
                 <marquee width="100%" height="100%" direction="left">
@@ -23,7 +23,7 @@
                     </marquee>
                 </div>
         </marque>
-  </div>
+  </div> -->
   <script>
         window.addEventListener('DOMContentLoaded', () => {
         const sentenceElement = document.getElementById('sentence');
